# flask_transaction_persister

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  app.py  docker-compose.load.yml  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  locustfile.py  post_transaction.rest  pyproject.toml  validation.py
loggers/: __init__.py  app_logger.py
persistence/: db.py  init_db.py
prometheus/: prometheus.yml
schemas/: transaction_schema.py
services/: dependency_injector.py  transaction_service.py
src/: Dockerfile  Dockerfile.dev  Dockerfile.prod  __init__.py  app.py  celery_config.py  config.py  dependencies.py  factories.py  pyproject.toml  routes.py  tasks.py
src/application/: dtos.py  protocols.py  schemas.py
src/application/services/: exchange_rates_service.py  incoming_transaction_processing_service.py  modified_transaction_processing_services.py  processing_services.py  transaction_service.py
src/domain/: models.py  protocols.py
src/infrastructure/: external_api_client.py  messaging_queue_client.py
src/infrastructure/external_api/: __init__.py  clients.py
src/infrastructure/messaging/: __init__.py  celery_config.py  di_container.py  queue_client.py  tasks.py
src/infrastructure/persistence/: db.py  extensions.py  models.py  repositories.py  setup.py
src/infrastructure/persistence/migrations/: env.py
src/infrastructure/persistence/migrations/versions/: 8d39412f4165_modify_transactions_table_to_include_.py  8e7c94e350de_rename_enrichedtransaction_model_for_.py  c1b900e83957_add_incoming_transaction_table_for_.py
src/migrations/: env.py
src/migrations/versions/: 3dc081995e84_create_transactions_table.py
src/persistence/: __init__.py  db.py  models.py  repo.py
src/presentation/: routes.py
src/schemas/: transaction_schema.py
src/services/: exchange_rates_service.py  transaction_service.py
src/utils/: __init__.py  app_logger.py  context_managers.py  exceptions.py  tracing.py
tests/: conftest.py  stubs.py
tests/test_application_layer/: __init__.py  conftest.py  stubs.py  test_exchange_rates_service.py  test_transaction_processing_service.py
tests/test_application_layer/stubs/: for_exchange_rates_service.py  for_transaction_processing_services.py
tests/test_apps/: __init__.py  stubs.py  test_celery_config.py  test_celery_tasks.py  test_dependencies.py  test_flask_app.py
tests/test_apps/stubs/: __init__.py  for_celery_tasks.py  for_flask_app.py
tests/test_domain_layer/: __init__.py  test_models.py
tests/test_inftrastructure/: test_external_api_client.py  test_messaging_queue_client.py  test_transaction_repository.py
tests/test_inftrastructure_layer/: __init__.py  test_external_api_client.py  test_messaging_queue_client.py  test_repositories.py
tests/test_presentation_layer/: __init__.py  conftest.py  stubs.py  test_routes.py
tests/test_utils/: __init__.py  stubs.py  test_context_managers.py
validators/: trasaction.py
